Fix all merge issues uncovered by merging 4.11.1
- Fix broken import statements around message handler annotations
- Disable and comment out interceptor specific logic that doesn't work
at the moment. Added TODOs to clarify future work
- Use InterceptorChain#proceedSync instead of proceed when applicable
- Use MessageHandlingMember#handleSync instead of handle when applicable
- Add use of MessageType in test cases where messages are constructed
- Use static returnTypeConverter for old use of MessageHandlingMember
- Fix dependencies where needed
- Resolve new warnings and incorrect indentation

#3067